welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:16: error: ';' expected but 'else' found.
}else if ( f==10) {
 ^blueTicket:29: error: Unmatched closing brace '}' ignored here
 }
 ^