welcome.lessons.welcome.bat.bool2.BlueTicket.scala.code
def blueTicket(a:Int, b:Int, c:Int):Int = {
var d=0
var e=0
var f=0
var g=0
 d=a+b
e=a+c
f=b+c
g=e+f
if (d==10){

	    return 10 }	
else if((d+10)==g){
	return 5 }
	         
}else if ( f==10) {
	return 10
}else if (e==10){

return 10 }


else{
return 0
} 

}
